# VAF-V-AGENTFORCE

./: .env.example  .gitignore  .mcp.json  CLARITY_SUMMARY.md  CLAUDE.md  CONSULTING_FRAMEWORK.md  DAILY_START.html  QUICK_START_GUIDE.md  README.md  START_HERE.md  V-AGENTFORCE-ARCHITECTURE.html  VAF-Master-Roadmap.html  VAF_Cowork_Execution_Brief_v2.md  start.sh  stop.sh
vaishali-agent-force/: ACTIVATION.md  RUN.sh  START.sh  knowledge-graph-preview.html  pyproject.toml  setup.sh  vaf.sh
vaishali-agent-force/agents/: 01_FORGE.md  06_AEGIS.md  07_NEXUS.md  08_ATLAS.md  README.md
vaishali-agent-force/agents/braindump/: PERSONA.md
vaishali-agent-force/agents/content/: PERSONA.md
vaishali-agent-force/data/: scheduled_tasks.json
vaishali-agent-force/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1774099113037-fdf34e00a3058.mjs  vite.config.ts.timestamp-1774165388215-b5e4b3b82fbe6.mjs
vaishali-agent-force/macos/: com.vaishali.agentforce.dashboard.plist  com.vaishali.agentforce.evening.plist  com.vaishali.agentforce.morning.plist  com.vaishali.agentforce.telegram.plist
vaishali-agent-force/scripts/: claude_desktop_mcp_config.json  clean_seed_data.sh  deploy_sprint0.sh  dev_seed_example_data.py  git_push_to_github.sh  ingest_finance_statements.py  install_autostart.sh  ios_shortcut_setup.md  launch_vaf.sh  nlm_batch.py  notebooklm_ingest.py  ocr_vision.swift  run_evening_briefing.py  run_morning_briefing.py  setup_obsidian_mcp.sh  setup_tunnel.sh  watch_folders.py  where_are_we_today.py
(+186 files in other folders)
