[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaishali-agent-force"
version = "0.1.0"
description = "Local-first personal agent system — Finance, Content, Education, Health & Insight Engine"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Vaishali" }]

dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dateutil>=2.8,<3.0",
    "httpx>=0.24,<1.0",
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.23,<1.0",
    "rich>=13.0,<14.0",
    "jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
telegram = [
    "python-telegram-bot[job-queue]>=20.0,<22.0",
]

[project.scripts]
vaf = "vaishali.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vaishali"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
